# futu-stock-mcp-server

./: .env.example  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
.github/workflows/: publish.yml
docs/: LOGGING.md
scripts/: README.md  deploy.sh  publish.fish  publish.sh
src/futu_stock_mcp_server/: server.py
